--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,5 +11,8 @@
     "@vitest/coverage-v8": "^1.6.1",
     "typescript": "^5.4.0",
     "vitest": "^1.3.1"
+  },
+  "dependencies": {
+    "pino": "^9.9.0"
   }
 }
