--- a/archon-ui-main/package.json
+++ b/archon-ui-main/package.json
@@ -24,6 +24,7 @@
     "@types/node": "24.3.0",
     "@types/react": "19.1.10",
     "@vitejs/plugin-react": "5.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "10.4.21",
     "jsdom": "24.0.0",
     "playwright": "1.54.2",
