--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           npm run typecheck --if-present
           npm run build --if-present
       - name: Test
-        run: npm test --if-present -- --coverage
+        run: npm test --if-present
       - name: Upload coverage
         if: always()
         uses: actions/upload-artifact@v4
