--- a/archon-ui-main/package.json
+++ b/archon-ui-main/package.json
@@ -26,6 +26,8 @@
     "@vitejs/plugin-react": "5.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "10.4.21",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
     "jsdom": "24.0.0",
     "playwright": "1.54.2",
     "postcss": "8.5.6",
