--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,6 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "loguru>=0.7.3",
+    "pydantic-settings>=2.10.1",
+    "python-dotenv>=1.1.1",
+    "python-socketio[asgi]>=5.13.0",
     "tenacity>=9.1.2",
     "uvicorn>=0.35.0",
 ]
