--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-socketio[asgi]>=5.13.0",
+    "supabase>=2.18.1",
     "tenacity>=9.1.2",
     "uvicorn>=0.35.0",
 ]
