--- a/archon-ui-main/package.json
+++ b/archon-ui-main/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:e2e": "vitest run",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
