--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "supabase>=2.18.1",
     "tenacity>=9.1.2",
     "uvicorn>=0.35.0",
+    "pyjwt>=2.10.1",
 ]
 
 [dependency-groups]
