--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -10,11 +10,13 @@ dependencies = [
     "loguru>=0.7.3",
     "pydantic-settings>=2.10.1",
     "python-dotenv>=1.1.1",
+    "python-multipart>=0.0.9",
     "python-socketio[asgi]>=5.13.0",
     "supabase>=2.18.1",
     "tenacity>=9.1.2",
     "uvicorn>=0.35.0",
     "pyjwt>=2.10.1",
+    "PyPDF2>=3.0.1",
 ]
 
 [dependency-groups]
