--- a/archon-ui-main/package.json
+++ b/archon-ui-main/package.json
@@ -14,6 +14,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
