--- a/archon-ui-main/package.json
+++ b/archon-ui-main/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
+    "socket.io-client": "^4.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
