--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^20.11.30",
     "@vitest/coverage-v8": "^1.6.1",
     "typescript": "^5.4.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "socket.io-client": "^4.7.5"
   },
   "dependencies": {
-    "pino": "^9.9.0"
+    "pino": "^9.9.0",
+    "socket.io": "^4.7.5"
   }
 }
