--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,22 @@ services:
       retries: 3
       start_period: 40s
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: Archon-Prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    networks:
+      - app-network
+    depends_on:
+      - archon-server
+      - archon-mcp
+      - archon-agents
+
   # Frontend
   frontend:
     build: ./archon-ui-main
