--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "uvicorn>=0.35.0",
     "pyjwt>=2.10.1",
     "PyPDF2>=3.0.1",
+    "prometheus-client>=0.21.0",
 ]
 
 [dependency-groups]
