--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -14,6 +14,7 @@ tenacity>=9.1.2
 uvicorn>=0.35.0
 pyjwt>=2.10.1
 PyPDF2>=3.0.1
+prometheus-client>=0.21.0
 
 # Sub-dependencies (automatically resolved but listed for transparency)
 annotated-types>=0.7.0
