--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -19,6 +19,11 @@ dependencies = [
     "pyjwt>=2.10.1",
     "PyPDF2>=3.0.1",
     "prometheus-client>=0.21.0",
+    "opentelemetry-api>=1.36.0",
+    "opentelemetry-sdk>=1.36.0",
+    "opentelemetry-exporter-otlp>=1.36.0",
+    "opentelemetry-instrumentation-fastapi>=0.57b0",
+    "opentelemetry-instrumentation-httpx>=0.57b0",
 ]
 
 [dependency-groups]
