--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,22 @@ services:
       - archon-mcp
       - archon-agents
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: Archon-Grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
+      - PROMETHEUS_URL=${PROMETHEUS_URL:-http://prometheus:9090}
+    volumes:
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+      - ./monitoring/dashboards:/var/lib/grafana/dashboards
+    networks:
+      - app-network
+    depends_on:
+      - prometheus
+
   jaeger:
     image: jaegertracing/all-in-one:1.57
     container_name: Archon-Jaeger
