--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,5 +1,9 @@
 name: Build and Test
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
     branches: [main]
@@ -37,6 +41,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
+      - name: Determine cache
+        id: cache
+        run: |
+          if docker buildx imagetools inspect ghcr.io/jacksmack1971/archonreloaded:${{ matrix.service }}-cache >/dev/null 2>&1; then
+            echo "ref=type=registry,ref=ghcr.io/jacksmack1971/archonreloaded:${{ matrix.service }}-cache" >> "$GITHUB_OUTPUT"
+          fi
       - name: Build image
         uses: docker/build-push-action@v5
         with:
@@ -44,7 +54,7 @@ jobs:
           file: ${{ matrix.context }}/${{ matrix.dockerfile }}
           push: false
           tags: ghcr.io/jacksmack1971/archonreloaded:${{ matrix.service }}
-          cache-from: type=registry,ref=ghcr.io/jacksmack1971/archonreloaded:${{ matrix.service }}-cache
+          cache-from: ${{ steps.cache.outputs.ref }}
           cache-to: type=registry,ref=ghcr.io/jacksmack1971/archonreloaded:${{ matrix.service }}-cache,mode=max
       - name: Install dependencies
         working-directory: python
@@ -94,6 +104,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
+      - name: Determine cache
+        id: cache
+        run: |
+          if docker buildx imagetools inspect ghcr.io/jacksmack1971/archonreloaded:${{ matrix.package }}-cache >/dev/null 2>&1; then
+            echo "ref=type=registry,ref=ghcr.io/jacksmack1971/archonreloaded:${{ matrix.package }}-cache" >> "$GITHUB_OUTPUT"
+          fi
       - name: Build image
         uses: docker/build-push-action@v5
         with:
@@ -101,7 +117,7 @@ jobs:
           file: ${{ matrix.context }}/${{ matrix.dockerfile }}
           push: false
           tags: ghcr.io/jacksmack1971/archonreloaded:${{ matrix.package }}
-          cache-from: type=registry,ref=ghcr.io/jacksmack1971/archonreloaded:${{ matrix.package }}-cache
+          cache-from: ${{ steps.cache.outputs.ref }}
           cache-to: type=registry,ref=ghcr.io/jacksmack1971/archonreloaded:${{ matrix.package }}-cache,mode=max
       - name: Install dependencies
         working-directory: ${{ matrix.workdir }}
