--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "test": "vitest run --coverage --passWithNoTests"
   },
   "dependencies": {
     "@docusaurus/core": "^3.8.0",
@@ -24,6 +25,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "@xyflow/react": "^12.6.0"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "^3.2.4",
+    "vitest": "^3.2.4"
   },
   "browserslist": {
     "production": [
