--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,6 +5,7 @@
 fastapi>=0.116.1
 httpx>=0.28.1
 loguru>=0.7.3
+logfire>=4.3.3
 pydantic-settings>=2.10.1
 python-dotenv>=1.1.1
 python-multipart>=0.0.9
