--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: Archon-Prometheus
+    restart: unless-stopped
     ports:
       - "9090:9090"
     volumes:
@@ -140,6 +141,7 @@ services:
   alertmanager:
     image: prom/alertmanager:latest
     container_name: Archon-Alertmanager
+    restart: unless-stopped
     ports:
       - "9093:9093"
     volumes:
